--- a/public/index.html
+++ b/public/index.html
@@ -56,12 +56,12 @@
 	</div>
 
 
+
 <footer id="footer">
 <p class="credit">Created by Camille Condrey</p>
 <a href="https://github.com/camillecondrey" target="_blank" class="link">
-<img src="GitHub-Mark-32px.png">
+<img src="GitHub-Mark-Light-32px.png">
 </a>
-		
 <a href="https://www.linkedin.com/in/camille-condrey-bb65568b/" target="_blank" class="link">
 <img src="In-White-34px-R.png">
 </a>
