--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,11 @@
 	 into lists based on categories you choose. </p>
 <section>
 	<div class="app-image-1">
-		<img class="app-1" src="app-screen-shot-1.png">
+		<img class="app-1" src="images/app-screen-shot-1.png">
 		<p class="app-description">Easily create and maintain your lists on<br> a single page</p>
 	</div>
 	<div class="app-image-2">
-		<img class="app-2" src="app-screen-shot-2.png">
+		<img class="app-2" src="images/app-screen-shot-2.png">
 		<p class="app-description">Store key information about each item including price, description, and a link to the product</p>
 	</div>	
 </section> 
@@ -60,10 +60,10 @@
 <footer id="footer">
 <p class="credit">Created by Camille Condrey</p>
 <a href="https://github.com/camillecondrey" target="_blank" class="link">
-<img src="GitHub-Mark-Light-32px.png">
+<img src="images/GitHub-Mark-Light-32px.png">
 </a>
 <a href="https://www.linkedin.com/in/camille-condrey-bb65568b/" target="_blank" class="link">
-<img src="In-White-34px-R.png">
+<img src="images/In-White-34px-R.png">
 </a>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>	
