--- a/public/lists.html
+++ b/public/lists.html
@@ -65,10 +65,10 @@
 <footer id="footer">
 <p class="credit">Created by Camille Condrey</p>
 <a href="https://github.com/camillecondrey" target="_blank" class="link">
-<img src="GitHub-Mark-Light-32px.png">
+<img src="images/GitHub-Mark-Light-32px.png">
 </a>
 <a href="https://www.linkedin.com/in/camille-condrey-bb65568b/" target="_blank" class="link">
-<img src="In-White-34px-R.png">
+<img src="images/In-White-34px-R.png">
 </a>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>	
 <script type="text/javascript" src="app-list.js"></script>
