landing pagge edits

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,11 @@
 	</div>
 	<div class="app-image-2">
 		<img class="app-2" src="images/app-screen-shot-2.png">
-		<p class="app-description">Store key information about each item including price, description, and a link to the product</p>
-	</div>	
+		<p class="app-description">Store key information about each item including price and description</p>
+	</div>
+	<div class="app-image-3">
+		<img class="app-3" src="images/app-screen-shot-3.png">
+		<p class="app-description">Link to the product to grab valuable meta data like item availability and images</p>
 </section> 
 
 <div>
