--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 		</div>	
 	</nav>
 	<p class="mission-statement">Organize all of your wants and needs in<br> one place with List It.</p>
-		<p class="span"><!--  Sometimes we can't buy all of the things we want or need at the same time.  -->Whether you're shopping for 
+		<p class="span">Whether you're shopping for 
 		things you need for a trip, home improvement, or just a new<br> summer wardrobe, List It lets you organize those things
 	 into lists based on categories you choose. </p>
 <section>
