--- a/public/index.html
+++ b/public/index.html
@@ -25,17 +25,30 @@
 		things you need for a trip, home improvement, or just a new<br> summer wardrobe, List It lets you organize those things
 	 into lists based on categories you choose. </p>
 <section>
-	<div class="app-image-1">
-		<img class="app-1" src="images/app-screen-shot-1.png">
-		<p class="app-description">Easily create and maintain your lists on<br> a single page</p>
+	<div class="demo-1">
+		<div class="app-image-1">
+			<img class="app-1" src="images/app-screen-shot-1.png">
+		</div>
+		<div>	
+			<p class="app-description">Easily create and maintain your lists on<br> a single page</p>
+		</div>
 	</div>
-	<div class="app-image-2">
-		<img class="app-2" src="images/app-screen-shot-2.png">
-		<p class="app-description">Store key information about each item including price and description</p>
+	<div class="demo-2">
+		<div class="app-image-2">
+			<img class="app-2" src="images/app-screen-shot-2.png">
+		</div>
+		<div>	
+			<p class="app-description">Store key information about each item including <br>  price and description</p>
+		</div>
 	</div>
-	<div class="app-image-3">
-		<img class="app-3" src="images/app-screen-shot-3.png">
-		<p class="app-description">Link to the product to grab valuable meta data like item availability and images</p>
+	<div class="demo-3">
+		<div class="app-image-3">
+			<img class="app-3" src="images/app-screen-shot-3.png">
+		</div>
+		<div>	
+			<p class="app-description">Link to the product to grab valuable meta data like <br>item availability and images</p>
+		</div>	
+	</div>	
 </section> 
 
 <div>
