--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 		<p class="span">Whether you're shopping for 
 		things you need for a trip, home improvement, or just a new<br> summer wardrobe, List It lets you organize those things
 	 into lists based on categories you choose. </p>
-<section>
+<div class="section">
 	<div class="demo-1">
 		<div class="app-image-1">
 			<img class="app-1" src="images/app-screen-shot-1.png">
@@ -46,10 +46,10 @@
 			<img class="app-3" src="images/app-screen-shot-3.png">
 		</div>
 		<div>	
-			<p class="app-description">Link to the product to grab valuable meta data like <br>item availability and images</p>
+			<p class="app-description">Link to the product page to grab valuable meta data like <br>product images and availability status</p>
 		</div>	
 	</div>	
-</section> 
+</div> 
 
 <div>
 <p class="tag-line">For those times when you can't buy it all at once, List It.</p>
