--- a/public/profile.html
+++ b/public/profile.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="profile.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+<!-- 	<meta name="viewport" content="width=device-width, initial-scale=1">
+ --></head>
 <body>
 <p class="app-name">List It</p>
 	<section class="heading"> 
