--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-</head>
+<!-- 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+ --></head>
 <body>
 <p class="app-name">List It</p>
 	<nav>
