--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<div class="log-in">
 			<form class="log-in-form" action="/users/me" method="post">
 				
-				<input class="login" type="email" placeholder="email address" name="email" id="email" required/>
+				<input class="login" type="username" placeholder="username" name="email" id="email" required/>
 				
 				<input class="login" type="password" placeholder="password" name="password" id="password" required/>
 				<button type="submit" id="log-in-button" action="profile.html">Log In</button>
@@ -60,8 +60,8 @@
 
 			<legend>Create Account</legend>
 
-			<label for="username">Email</label>
-			<input class="sign-up-input" type="email" name="username" id="username" required/>
+			<label for="username">Username</label>
+			<input class="sign-up-input" type="username" name="username" id="username" required/>
 
 			<label for="password">Password</label>
 			<input class="sign-up-input" type="password" name="password" id="sign-up-password" required/>
