--- a/public/lists.html
+++ b/public/lists.html
@@ -9,7 +9,9 @@
 <!-- 	<meta name="viewport" content="width=device-width, initial-scale=1">
  --></head>
 <body>
+<a href="profile.html">
 <p class="app-name">List It</p>
+</a>
 <button class="logout">Log Out</button>
 
 
