--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 			</form>	
 		</div>	
 	</nav>
-	<p class="mission-statement">Organize all of your wants and needs in<br> one place with List It.</p>
+	<p class="mission-statement">Organize all of your shopping lists in<br> one place with List It.</p>
 		<p class="span">Whether you're shopping for 
 		things you need for a trip, home improvement, or just a new<br> summer wardrobe, List It lets you organize those things
 	 into lists based on categories you choose. </p>
@@ -58,7 +58,7 @@
 	<div class="sign-up">
 		<form class="sign-up-form" action="/users" method="post">
 
-			<legend>Create Account</legend>
+			<legend>Create Account <br><span class="legend">or demo this app with username: <b>demo </b>and password:<b> demo</b><span></legend>
 			
 			<label for="username">Username</label>
 			<input class="sign-up-input" type="username" name="username" id="username" required/>
