--- a/public/lists.html
+++ b/public/lists.html
@@ -57,6 +57,7 @@
 	</div>
 
 	<button class="edit-buttons add" type="submit">Add to List</button>
+	<button class="cancel">Cancel</button>
 </div>	
 </form>	
 
