--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 	<div class="sign-up">
 		<form class="sign-up-form" action="/users" method="post">
 
-			<legend>Create Account <br><span class="legend">or demo this app with username: <b>demo </b>and password:<b> demo</b><span></legend>
+			<legend>Create Account <br><span class="legend">or demo this app by logging in above with username: <b>demo </b>and<br> password:<b> demo</b><span></legend>
 			
 			<label for="username">Username</label>
 			<input class="sign-up-input" type="username" name="username" id="username" required/>
